# qr_payments

./: .gitignore  README.md
qr_payments_back/: Cargo.toml
qr_payments_back/config/: config.json
qr_payments_back/schema_reset/: schema.sql
qr_payments_back/src/: datatypes.rs  main.rs
qr_payments_back/src/api/: mod.rs  services.rs
qr_payments_back/src/config/: mod.rs
qr_payments_back/src/database/: mod.rs
qr_payments_back/src/modules/: mod.rs
qr_payments_back/src/modules/transactions/: db.rs  mod.rs  services.rs
qr_payments_back/src/modules/wallets/: db.rs  mod.rs  services.rs
